# rust-discord-bot

./: .env  Cargo.toml  LICENSE  README.md  bacon.toml
src/: main.rs
