[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"] }
dotenv = "0.15.0"
