[package]
name = "rust-discord-bot"
version = "0.5.2"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
repository = "https://github.com/gmifflen/rust-discord-bot"

[profile.release]
opt-level = 3
codegen-units = 1 # causes slower compile times, change to 16 to return to default
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "tls-rustls"] }
dotenvy = "0.15.7"
regex = "1.11.1"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
